<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:fillViewport="true"
        tools:context=".login.SignUpActivity"
>
    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".login.SignUpActivity">

        <ImageView
                android:layout_height="173dp" app:srcCompat="@drawable/wotan_login"
                android:id="@+id/imageView"
                android:layout_width="0dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="0.0"/>


        <EditText
                android:textColorHighlight="@color/colorWotan1"
                android:id="@+id/editTextEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:hint="@string/login_email"
                android:textColor="@color/colorPrimaryText"
                android:background="@drawable/border_drawable"
                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space"
                android:layout_height="@dimen/login_edit_text_height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginBottom="67dp" app:layout_constraintBottom_toTopOf="@+id/buttonForgot"/>>


        <Button
                android:id="@+id/buttonForgot"
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:height="@dimen/login_button_xl_height"
                android:text="@string/login_reset_password"
                android:textColor="@color/colorTextWhite"
                android:textSize="@dimen/login_text_xl_size"
                android:textAllCaps="false"
                android:background="@drawable/button_ripple_bg"

                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="107dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="106dp"
                app:layout_constraintHorizontal_bias="0.503"
                android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/buttonGoLogIn2"/>


        <Button
                android:id="@+id/buttonGoLogIn2"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:text="@string/login_go_login"
                android:background="@drawable/button_ripple_sign_up"
                android:textSize="15sp"
                android:textColor="@color/colorSecondaryText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintBottom_toBottomOf="parent"/>


    </android.support.constraint.ConstraintLayout>

</ScrollView>
