<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:fillViewport="true"
        tools:context=".login.LoginActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".login.LoginActivity">


        <EditText
                android:textColorHighlight="@color/colorWotan1"
                android:id="@+id/editTextEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:hint="@string/login_email"
                android:textColor="@color/colorPrimaryText"
                android:background="@drawable/border_drawable"
                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space"
                android:layout_height="@dimen/login_edit_text_height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                android:layout_marginTop="8dp"/>

        <EditText
                android:id="@+id/editTextPassword"
                android:inputType="textPassword"
                android:background="@drawable/border_drawable"
                android:layout_width="match_parent"
                android:textColor="@color/colorPrimaryText"
                android:hint="@string/login_password"

                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space"
                android:layout_height="@dimen/login_edit_text_height"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail"/>


        <Button
                android:id="@+id/buttonLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="@dimen/login_button_xl_height"
                android:text="Aceptar"
                android:textColor="@color/colorTextWhite"
                android:textSize="@dimen/login_text_xl_size"
                android:textAllCaps="false"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:background="@drawable/button_ripple_bg"
                android:layout_marginTop="88dp"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:text="@string/login_forgot_password"
                android:textColor="@color/colorSecondaryText"
                android:textColorHighlight="@color/colorBackGroundWhite"
                android:id="@+id/textViewForgotPassword"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword"/>

        <View
                android:layout_width="155dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="36dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonLogInFacebook"
                android:id="@+id/view2"/>

        <View
                android:layout_width="147dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:id="@+id/view" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonLogInGoogle"/>

        <com.google.android.gms.common.SignInButton
                android:id="@+id/buttonLogInGoogle"
                android:layout_height="51dp"
                android:layout_width="0dp"
                android:background="@drawable/button_ripple_google"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="17dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"/>

        <com.facebook.login.widget.LoginButton
                android:id="@+id/buttonLogInFacebook"
                android:layout_height="53dp"
                android:layout_width="0dp"
                android:text="@string/login_sign_in_facebook"
                android:textColor="@color/colorBackGroundWhite"
                android:background="@drawable/button_ripple_facebook"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="17dp"
                android:layout_marginBottom="26dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"/>

        <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:text="@string/login_sign_Up"
                android:background="@drawable/button_ripple_sign_up"
                android:textSize="15sp"
                android:textColor="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
                android:layout_height="173dp"
                app:srcCompat="@drawable/wotan_login"
                android:id="@+id/imageView"
                android:layout_width="0dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
                app:layout_constraintHorizontal_bias="0.0"/>

        <CheckBox
                android:text="Recúerdame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxLogin"
                android:buttonTint="@color/colorWotan1"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword"/>

        <TextView
                android:text="ò ingresa con:"
                android:textColor="@color/colorTextBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" android:layout_marginBottom="28dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonLogInFacebook"
                android:layout_marginStart="11dp"
                app:layout_constraintStart_toEndOf="@+id/view2"
                app:layout_constraintEnd_toStartOf="@+id/view"
                android:layout_marginEnd="11dp"/>


    </android.support.constraint.ConstraintLayout>

</ScrollView>
